--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "vercel-build": "echo 'Build step completed'"
   },
   "keywords": [],
   "author": "",
