--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,9 @@
       "src": "/(.*)",
       "dest": "src/app.js"
     }
-  ]
+  ],
+  "crons": [{
+    "path": "/api/cron",
+    "schedule": "0 0 * * *"
+  }]
 } 
