test: cron test API 추가

--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,14 @@
       "dest": "src/app.js"
     }
   ],
-  "crons": [{
-    "path": "/api/cron",
-    "schedule": "0 21 * * *"
-  }]
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "0 21 * * *"
+    },
+    {
+      "path": "/api/cron-test",
+      "schedule": "0 * * * *"
+    }
+  ]
 } 
